// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabButton /> should render the component with isActive set as true 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "HorizontalTabButtonStyled__HorizontalTabButton-rurqeb-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";color:",
          [Function],
          ";background-color:",
          [Function],
          ";margin-right:",
          [Function],
          ";padding:",
          [Function],
          ";border-bottom:1px solid ",
          [Function],
          ";outline-width:0;text-decoration:none;cursor:pointer;display:inline-block;text-transform:capitalize;&:hover{text-decoration:none;}&:active,&:hover,&:focus{color:",
          [Function],
          ";}",
        ],
      },
      "displayName": "HorizontalTabButtonStyled__HorizontalTabButton",
      "render": [Function],
      "styledComponentId": "HorizontalTabButtonStyled__HorizontalTabButton-rurqeb-0",
      "target": "a",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  isActive={true}
/>
`;

exports[`<TabButton /> should render the component with the default props 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "HorizontalTabButtonStyled__HorizontalTabButton-rurqeb-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";color:",
          [Function],
          ";background-color:",
          [Function],
          ";margin-right:",
          [Function],
          ";padding:",
          [Function],
          ";border-bottom:1px solid ",
          [Function],
          ";outline-width:0;text-decoration:none;cursor:pointer;display:inline-block;text-transform:capitalize;&:hover{text-decoration:none;}&:active,&:hover,&:focus{color:",
          [Function],
          ";}",
        ],
      },
      "displayName": "HorizontalTabButtonStyled__HorizontalTabButton",
      "render": [Function],
      "styledComponentId": "HorizontalTabButtonStyled__HorizontalTabButton-rurqeb-0",
      "target": "a",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  isActive={false}
/>
`;
